--- a/paper/abstract.tex
+++ b/paper/abstract.tex
@@ -10,21 +10,22 @@ main-sequence stars.
 In this work, we use the velocities of low-mass \kepler\ dwarfs as an age
 proxy, to reveal their rotational evolution and demonstrate that kinematics
 could be a useful tool for calibrating gyrochronology.
-At ages less than $\sim$1 Gyr we find that a gyrochronology model, calibrated
-to the Praesepe cluster, accurately predicts the relative ages of stars.
-At these young ages, lower-mass stars spin more slowly than higher-mass stars
-because their stronger magnetic fields lead to more efficient angular momentum
-loss.
-However, at old ages we find that late G and early K dwarfs rotate {\it
-faster} than late K dwarfs of the same age.
+% At ages less than $\sim$1 Gyr we find that a gyrochronology model, calibrated
+% to the Praesepe cluster, accurately predicts the relative ages of stars.
+We find that, at young ages, lower-mass stars spin more slowly than
+higher-mass stars because their stronger magnetic fields lead to more
+efficient angular momentum loss.
+This reflects the behavior of young open clusters such as the Pleaides,
+Praesepe, and the Hyades.
+However, at older ages we find that late G and early K dwarfs rotate at the
+same rate as late K dwarfs of the same age, and eventually rotate faster.
 % These oThis may be a feature of angular momentum redistribution in the stellar
 % interior.
 % This implies that low-mass stars lose angular momentum more slowly than
 % higher-mass stars after a certain age or Rossby number.
-These results, based on field star rotation periods, align with recent
-findings from the rotation periods of stars in middle-aged open clusters and
-theoretical models that vary the rate of surface-to-core angular momentum
-transport as a function of time and mass.
+These results align with recent findings from the rotation periods of stars in
+middle-aged open clusters and theoretical models that vary the rate of
+surface-to-core angular momentum transport as a function of time and mass.
 Finally, we find no evidence for mass-dependent heating in a sample of K and M
 dwarfs in the \kepler\ field.
 
