--- a/paper/discussion.tex
+++ b/paper/discussion.tex
@@ -15,10 +15,10 @@ envelope with time and mass \citep{spada2019}.
 
 The velocity dispersions of stars in the \mct\ sample provide the following
 picture of rotational evolution.
-At young ages, stellar rotation period decreases with mass.
-This is probably because lower-mass stars with deeper convection zones have
-stronger magnetic fields, larger Alfven radii and therefore experience greater
-angular momentum loss rate.
+At young ages, stellar rotation period decreases with mass, likely because
+lower-mass stars with deeper convection zones have stronger magnetic fields,
+larger Alfv\'en radii and therefore experience greater angular momentum loss
+rate.
 According to the \citet{spada2019} models, there is minimal transportation of
 angular momentum from the surface to the core of the star at these young ages,
 so the surface slows down but the core keeps spinning rapidly.
