--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -10,9 +10,9 @@ pinsonneault1989}.
 Although stars are typically born with random rotation periods, ranging from 1
 to 10 days, observations of young open clusters reveal that their rotation
 periods converge onto a unique sequence by $\sim$500-700 million years
-\citep[\eg][]{irwin2009}.
-After this time, it is thought that the rotation period of a star is
-determined, to first order, by its color and age alone.
+\citep[\eg][]{irwin2009, gallet2013}.
+After this time, the rotation period of a star is thought to be determined, to
+first order, by its color and age alone.
 This is the principle behind gyrochronology -- the method of inferring a
 star’s age from its rotation period \citep[\eg][]{barnes2003, barnes2007,
 barnes2010, meibom2011, meibom2015}.
@@ -28,9 +28,9 @@ However, new photometric rotation periods made available by the \kepler\
 meibom2015, curtis2019} reveal that rotational evolution is more complicated
 than previously thought.
 For example, the M dwarfs in the $\sim$ 650 Myr Praesepe cluster spin more
-slowly than the G dwarfs -- in theory because lower-mass stars have deeper
-convections zones which generate stronger magnetic fields and more efficient
-magnetic braking.
+slowly than the G dwarfs.
+In theory this is because lower-mass stars have deeper convections zones which
+generate stronger magnetic fields and more efficient magnetic braking.
 However, in the 1.1 Gyr NGC 6811 cluster, late-K dwarfs rotate at the {\it
 same} rate as early-K dwarfs \citep{curtis2019}.
 In other words, convection zone depth cannot be the only variable that affects
@@ -41,7 +41,6 @@ period-color relation \citep{spada2019}.
 These models suggest that mass and age-dependent angular momentum transport
 between the cores and envelopes of stars has a significant impact on their
 surface rotation rates.
-
 Another example of unexpected rotational evolution is seen in old field stars
 which appear to rotate more rapidly than classical gyrochronology models
 predict \citep{angus2015, vansaders2016, vansaders2018, metcalfe2019}.
@@ -49,20 +48,20 @@ A mass-dependent modification to the classical \prot\ $\propto
 t^{\frac{1}{2}}$ spin-down law \citep{skumanich1972} is required to reproduce
 these observations.
 To fit magnetic braking models to these data, a cessation of magnetic braking
-is required after stars reach a Rossby number (ratio of rotation period to
-convective turnover time) of around 2 \citep{vansaders2016, vansaders2018}.
+is required after stars reach a Rossby number (Ro; the ratio of rotation
+period to convective turnover time) of around 2 \citep{vansaders2016,
+vansaders2018}.
 
-The rotational evolution of stars is clearly a complicated process, and to
-fully calibrate the gyrochronology relations we need reliable ages for large
-numbers of field stars which span a range of ages.
+The rotational evolution of stars is clearly a complicated process and, to
+fully calibrate the gyrochronology relations we need a large sample of
+reliable ages for stars spanning a range of ages and masses.
 % however relying on open clusters (which are typically young) and asteroseismic
 % stars (which are typically G-type stars or more massive) to calibrate
 % gyrochronology relations limits the mass and age coverage of the calibration
 % sample.
-In this paper, we use the velocity dispersions of field stars to gain insight
-into their rotational evolution.
-Velocity dispersion provides relative ages for groups of stars, allowing us to
-observe the rotational evolution of stars over a range of masses and ages.
+In this paper, we use the velocity dispersions of field stars to qualitatively
+explore the rotational evolution of GKM dwarfs, and show that kinematics could
+provide a gyrochronology calibration sample.
 
 \subsection{Using kinematics as an age proxy}
 
@@ -93,7 +92,7 @@ and draw conclusions based on the implied relative ages.
 Vertical velocity, \vz, can only be calculated with full 6-dimensional
 position and velocity information, and unfortunately most stars with measured
 rotation periods do not have radial velocity (RV) measurements because they
-are relatively faint \kepler\ targets ($\sim$11th-18th magnitudes).
+are relatively faint \kepler\ targets ($\sim$12th-17th magnitudes).
 For this reason, we used velocity in the direction of galactic latitude, \vb,
 to approximate \vz.
 The \kepler\ field is positioned at low galactic latitude
