--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -87,11 +87,11 @@ approach to calibrating gyrochronology}
     Adrian Price-Whelan,
     Elisabeth Newton,
     Jennifer van Saders,
-    Travis Berger,
     Jason Curtis,
     Lauren Anderson,
-    Rocio Kiman
-    \% Dan Foreman-Mackey}
+    Rocio Kiman,
+    Travis Berger,
+    \& Dan Foreman-Mackey}
     % Megan Bedell,
     % Jackie Faherty,
     % Melissa Ness}
