small edits to text

--- a/Main_figure_2.ipynb
+++ b/Main_figure_2.ipynb
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
     "lw0, lw1 = 5, 2\n",
     "# Plot gyro models\n",
     "for i in range(len(ages)):\n",
-    "#     ax1.plot(xs_teff, prots[i, :], ls=\"-\", lw=lw1, color=\"w\", zorder=2)\n",
+    "#     ax1.plot(xs_teff, prots[i, :], ls=\"-\", lw=lw1, color=\"k\", zorder=2)\n",
     "    ax1.plot(xs_teff, prots[i, :], ls=\"-\", lw=1, color=\"k\", zorder=1,\n",
     "             label=\"$\\mathrm{Angus~et~al.~(2019)~model}$\")\n",
     "\n",
