--- a/paper/abstract.tex
+++ b/paper/abstract.tex
@@ -12,13 +12,16 @@ proxy, to reveal their rotational evolution and demonstrate that kinematics
 could be a useful tool for calibrating gyrochronology.
 % At ages less than $\sim$1 Gyr we find that a gyrochronology model, calibrated
 % to the Praesepe cluster, accurately predicts the relative ages of stars.
-We find that, at young ages, lower-mass stars spin more slowly than
-higher-mass stars because their stronger magnetic fields lead to more
-efficient angular momentum loss.
-This reflects the behavior of young open clusters such as the Pleaides,
-Praesepe, and the Hyades.
+We find that the period-color relationship of the Praesepe cluster is not
+repeated in stars of older ages: a polynomial gyrochronology model, fit to
+Praesepe stars, under-predicts the ages of late K dwarfs in the field.
+In general we find that lower-mass stars spin more slowly than higher-mass
+stars at young ages.
+This is likely because their stronger magnetic fields lead to more efficient
+angular momentum loss and reflects the behavior of young open clusters such as
+the Pleaides, Praesepe, and the Hyades.
 However, at older ages we find that late G and early K dwarfs rotate at the
-same rate as late K dwarfs of the same age, and eventually rotate faster.
+{\it same rate} or faster than late K dwarfs of the same age.
 % These oThis may be a feature of angular momentum redistribution in the stellar
 % interior.
 % This implies that low-mass stars lose angular momentum more slowly than
