--- a/paper/bib.bib
+++ b/paper/bib.bib
@@ -1099,6 +1099,44 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@INPROCEEDINGS{irwin2009,
+       author = {{Irwin}, Jonathan and {Bouvier}, Jerome},
+        title = "{The rotational evolution of low-mass stars}",
+     keywords = {stars: late-type, stars: low-mass, stars: pre─main-sequence, stars: rotation, Astrophysics - Solar and Stellar Astrophysics},
+    booktitle = {The Ages of Stars},
+         year = "2009",
+       editor = {{Mamajek}, Eric E. and {Soderblom}, David R. and {Wyse}, Rosemary F.~G.},
+       series = {IAU Symposium},
+       volume = {258},
+        month = "Jun",
+        pages = {363-374},
+          doi = {10.1017/S1743921309032025},
+archivePrefix = {arXiv},
+       eprint = {0901.3342},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2009IAUS..258..363I},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{gallet2013,
+       author = {{Gallet}, F. and {Bouvier}, J.},
+        title = "{Improved angular momentum evolution model for solar-like stars}",
+      journal = {\aap},
+     keywords = {stars: solar-type, stars: evolution, stars: rotation, stars: mass-loss, stars: magnetic field, Astrophysics - Solar and Stellar Astrophysics},
+         year = "2013",
+        month = "Aug",
+       volume = {556},
+          eid = {A36},
+        pages = {A36},
+          doi = {10.1051/0004-6361/201321302},
+archivePrefix = {arXiv},
+       eprint = {1306.2130},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2013A&A...556A..36G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 @article{astropy2018,
     Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
