--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -4,7 +4,7 @@
 \subsection{Gyrochronology}
 
 Stars with significant convective envelopes ($\lesssim$ 1.3 M$_\odot$) have
-strong magnetic fields and spin more slowly over time through magnetic braking
+strong magnetic fields and slowly lose angular momentum via magnetic braking
 \citep[\eg][]{schatzman1962, weber1967, skumanich1972, kawaler1988,
 pinsonneault1989}.
 Although stars are typically born with random rotation periods, ranging from 1
@@ -13,7 +13,7 @@ periods converge onto a unique sequence by $\sim$500-700 million years
 \citep[\eg][]{irwin2009, gallet2013}.
 After this time, the rotation period of a star is thought to be determined, to
 first order, by its color and age alone.
-This is the principle behind gyrochronology -- the method of inferring a
+This is the principle behind gyrochronology, the method of inferring a
 star’s age from its rotation period \citep[\eg][]{barnes2003, barnes2007,
 barnes2010, meibom2011, meibom2015}.
 % It is well established that magnetized stellar winds cause the rotation
@@ -25,8 +25,8 @@ barnes2010, meibom2011, meibom2015}.
 However, new photometric rotation periods made available by the \kepler\
 \citep{borucki2010} and \ktwo\ \citep{howell2014} missions
 \citep[\eg][]{mcquillan2014, garcia2014, douglas2017, rebull2017, meibom2011,
-meibom2015, curtis2019} reveal that rotational evolution is more complicated
-than previously thought.
+meibom2015, curtis2019} have revealed that rotational evolution is more
+complicated than previously thought.
 For example, the M dwarfs in the $\sim$ 650 Myr Praesepe cluster spin more
 slowly than the G dwarfs.
 In theory this is because lower-mass stars have deeper convections zones which
@@ -89,14 +89,15 @@ and draw conclusions based on the implied relative ages.
 % velocity \citep{ting2019}, although still only a weak age indicator for
 % individual stars \citep{beane2018}, however both vertical action ($J_z$) and
 % vertical
-Vertical velocity, \vz, can only be calculated with full 6-dimensional
-position and velocity information, and unfortunately most stars with measured
-rotation periods do not have radial velocity (RV) measurements because they
-are relatively faint \kepler\ targets ($\sim$12th-17th magnitudes).
+Although {\it vertical} velocity, \vz, is a well-established age proxy, it can
+only be calculated with full 6-dimensional position and velocity information.
+Unfortunately most field stars with measured rotation periods do not have
+radial velocity (RV) measurements because they are relatively faint \kepler\
+targets ($\sim$12th-16th magnitudes).
 For this reason, we used velocity in the direction of galactic latitude, \vb,
 to approximate \vz.
 The \kepler\ field is positioned at low galactic latitude
-(b=$\sim$5-20\degrees), so \vb\ is a close (although imperfect -- see section
+(b=$\sim$5-20\degrees), so \vb\ is a close (although imperfect, see section
 \ref{sec:results}) approximation to \vz.
 Because we use \vb\ rather than \vz\, we cannot calculate absolute kinematic
 ages using an age-velocity dispersion relation (AVR).
