updating main figure

--- a/paper/bib.bib
+++ b/paper/bib.bib
@@ -1137,6 +1137,26 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{brown2011,
+       author = {{Brown}, Timothy M. and {Latham}, David W. and {Everett}, Mark E. and
+         {Esquerdo}, Gilbert A.},
+        title = "{Kepler Input Catalog: Photometric Calibration and Stellar Classification}",
+      journal = {\aj},
+     keywords = {catalogs, methods: data analysis, surveys, techniques: photometric, Astrophysics - Solar and Stellar Astrophysics},
+         year = "2011",
+        month = "Oct",
+       volume = {142},
+       number = {4},
+          eid = {112},
+        pages = {112},
+          doi = {10.1088/0004-6256/142/4/112},
+archivePrefix = {arXiv},
+       eprint = {1102.0342},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2011AJ....142..112B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 @article{astropy2018,
     Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
