--- a/paper/method.tex
+++ b/paper/method.tex
@@ -172,9 +172,29 @@ This analysis was performed using \vb\ but we also examined the {\it vertical}
 velocities of the 537 stars in this sample with RV measurements.
 Again, no evidence was found for mass-dependent heating: the slope of the
 velocity dispersion-temperature relation was consistent with zero.
+\begin{figure}
+  \caption{
+      Top: Stellar velocity (\vb) as a function of \teff\ for
+      \kepler\ K and M dwarfs.
+Vertical lines indicate different \teff-groupings used to calculate velocity
+    dispersion.
+Pink stars were not included in velocity dispersion calculations as they were
+    either removed as outliers during a sigma clipping process, or they lie at
+    the sparcely populated, extremely cool end of the temperature range.
+    Velocity dispersion and \teff\ are slightly positively correlated, likely
+    due to a brightness-related selection bias, indicating that mass-dependent
+    heating does not significantly affect low-mass stars in the \kepler\
+    field.
+}
+  \centering
+    \includegraphics[width=1\textwidth]{vb_vs_teff}
+\label{fig:vb_vs_teff}
+\end{figure}
 
-At a galactic latitude of zero, $v_b=v_z$, however for increasing values of
-$b$, this equivalence becomes an approximation that grows noisier with $b$.
+Having found no strong evidence for mass-dependent heating, we next tested
+the validity of \vb\ as a proxy for \vz\ in more detail.
+At a galactic latitude, $b$, of zero, $v_b=v_z$, however for increasing values
+of $b$, this equivalence becomes an approximation that grows noisier with $b$.
 To test the validity of the \vb$\sim$\vz\ approximation over a range of
 latitudes we downloaded stellar data from the \Gaia\ Universe Model Snapshot
 (GUMS) simulation -- a simulated \Gaia\ catalog \citep{robin2012}.
@@ -184,35 +204,32 @@ a limiting magnitude of 16 dex, and calculated their \vz\ and \vb\ velocities.
 The relationship between \vz\ and \vb\ is close to 1:1, with \vz\ greater than
 \vb\ by around 4.5 kms$^{-1}$ at $b=5$, due to the Sun's own motion in the
 Galaxy.
-We subtracted this offset and examined the residuals of the \vz\-\vb\
+We subtracted this offset and examined the residuals of the \vz\ -- \vb\
 relationship to investigate the variance as a function of Galactic latitude.
 We found that \vb\ is drawn from a heavy-tailed distribution, centered on \vz,
-with a standard deviation (calculated as 1.5 $\times$ the median absolute
-deviation) that increased with increasing $b$.
-Figure \ref{fig:vb_vz} shows how \vz\ transforms to \vb\ over a range of
-Galactic latitudes.
+with standard deviation increasing with $b$ (see figure \ref{fig:vb_vz}).
 The standard deviation of \vz-\vb\ was around 3kms$^{-1}$ at $b \sim 5^\circ
-$, 4kms${^-1}$ at 10$^\circ$, 6kms${^-1}$ at 15$^\circ$, and 9kms${^-1}$ at
+$, 4kms$^{-1}$ at 10$^\circ$, 6kms$^{-1}$ at 15$^\circ$, and 9kms$^{-1}$ at
 20$^\circ$.
-Figure \ref{fig:vb_vz} shows the differences between \vz\ and \vb\ velocities
-over different Galactic latitudes.
-Kernel Density Estimates (KDEs) are shown as solid black lines and Gaussian
-fits are shown as dashed blue lines.
-The \vb\-\vz\ residuals are close to Gaussian, with slightly heavy tails, and
-the variance increases with increasing Galactic latitude.
+
+% Figure \ref{fig:vb_vz} shows the differences between \vz\ and \vb\ velocities
+% over different Galactic latitudes.
+% Kernel Density Estimates (KDEs) are shown as solid black lines and Gaussian
+% fits are shown as dashed blue lines.
+% The \vb\-\vz\ residuals are close to Gaussian, with slightly heavy tails, and
+% the variance increases with increasing Galactic latitude.
 \begin{figure}
   \caption{
-This figure demonstrates the relationship between \vb\ and \vz\, after
-    subtracting a straight-line-fit, for stars in
-    the \kepler\ field, based on the GUMS simulation.
+This figure demonstrates the variance in the relationship between \vb\ and
+    \vz\ for stars in the \kepler\ field, based on the GUMS simulation.
 The panels show a kernel density estimator (KDE) (black solid line) for
-    the \vz-\vb\ residuals of stars in the GUMS simulation at four different
-    Galactic latitudes.
+    the \vz -- \vb\ residuals of stars in the GUMS simulation at four
+    different Galactic latitudes.
 Blue dashed lines show Gaussian fits to these KDEs.
-The distributions are close to Gaussians, but with slightly heavy tails.
+The distributions are close to Gaussian, with slightly heavy tails.
 The standard deviations of the Gaussian fits increase with Galactic latitude.
-This figure illustrates the fact using \vb\ instead of \vz\ artificially
-    increases the velocity dispersion, especially at high latitudes.
+This figure illustrates how using \vb\ instead of \vz\ artificially
+    increases velocity dispersion, especially at high latitudes.
 }
   \centering
     \includegraphics[width=1\textwidth]{vb_vz}
@@ -248,31 +265,25 @@ an opportunity to validate (or correct) the results presented here.
 % positively, not negatively correlated for cool stars in the \kepler\ field,
 % this effect is probably too small to influence our results.
 
-\begin{figure}
-  \caption{
-      Top: Stellar velocity (\vb) as a function of \teff\ for
-      \kepler\ K and M dwarfs.
-Vertical lines indicate different \teff-groupings used to calculate velocity
-    dispersion.
-Pink stars were not included in velocity dispersion calculations as they were
-    either removed as outliers during a sigma clipping process, or they lie at
-    the sparcely populated, extremely cool end of the temperature range.
-    Velocity dispersion and \teff\ are slightly positively correlated, likely
-    due to a brightness-related selection bias, indicating that mass-dependent
-    heating does not significantly affect low-mass stars in the \kepler\
-    field.
-}
-  \centering
-    \includegraphics[width=1\textwidth]{vb_vs_teff}
-\label{fig:vb_vs_teff}
-\end{figure}
-
 % Figure \ref{fig:vb_vs_teff} indicates that mass-dependent heating does not
 % strongly affect the \mct\ sample of rotating \kepler\ stars.
 % For this reason, we assume that age difference is the major cause of velocity
 % dispersion differences between groups.
 % In other words, (\vb) velocity dispersion is a reliable age proxy for the
 % \mct\ sample.
+
+Because of the noisy relationship between \vb\ and \vz\, in this paper we do
+not attempt to convert velocity dispersion (\sigmavb) into an age via an
+age-velocity dispersion relation (AVR) \citep[\eg][]{holmberg2009}.
+Although it seems \sigmavb\ can be used to roughly rank stars by age, a more
+careful analysis that includes formal modeling of the \vb\ -- \vz\
+relationship will be needed to calculate absolute ages.
+% For example, the velocity distributions could be modeled as a mixture of
+% Gaussians in order to account for the additional velocity dispersion caused by
+% the \vz-\vb\ transformation.
+The RVs of most of these stars will become available in \Gaia\ DR3, allowing
+calculations of \vz, which can be used to calculate more reliable ages via an
+AVR.
 
 To explore the relationship between rotation period, \teff\ and age, we
 removed high and low velocity outliers from the \mct\ sample by performing
@@ -292,15 +303,3 @@ end, and binarity or weakened braking \citep{vansaders2016} at the hot end.
 % throughout this paper we show rotation periods as a function of effective
 % temperature, \teff, because it is easier to divide stars into bins of roughly
 % equal numbers in \teff-space than in color-space.
-
-In this paper, we do not attempt to convert velocity dispersion (\sigmavb)
-into an age via an age-velocity dispersion relation (AVR)
-\citep[\eg][]{holmberg2009}.
-Although it seems \sigmavb\ can be used to roughly rank stars by age, a more
-careful analysis will be needed to calculate absolute ages.
-For example, the velocity distributions could be modeled as a mixture of
-Gaussians in order to account for the additional velocity dispersion caused by
-the \vz-\vb\ transformation.
-The RVs of most of these stars will become available in \Gaia\ DR3, allowing
-calculations of \vz, which can be used to calculate more reliable ages via an
-AVR.
