small changes -- still need to go over wording in discussion section

--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -1,15 +1,15 @@
 \section{Conclusion}
 
-We examined the rotational evolution of \kepler\ field stars using their
-velocity dispersions as a proxy for age.
-We found that old groups of cool dwarfs selected to be coeval using the
-\citet{angus2019} gyrochronology relation do {\it not} have the same velocity
-dispersion across all temperatures.
-This implies that the \citet{angus2019} relation, which is based on the
+We examined the rotational evolution of \kepler\ field stars by interpreting
+their velocity dispersions as a proxy for age.
+% We found that old groups of cool dwarfs, selected to be coeval using the
+% \citet{angus2019} gyrochronology relation, do {\it not} have the same velocity
+% dispersion across all temperatures.
+We found that the \citet{angus2019} relation, which is based on the
 period-color relation of the 650 Myr Praesepe cluster, does not correctly
 describe the period-age-color/\teff\ relation for old stars.
 It appears that the period-color/\teff\ relation changes shape over time in a
-way that qualitatively agrees with theoretical that which include a
+way that qualitatively agrees with theoretical models which include a
 mass-dependent core-envelope angular momentum transport \citep{spada2019}.
 At young ages, rotation period is anti-correlated with \teff: cooler stars
 spin more slowly than hotter stars of the same age.
@@ -17,10 +17,10 @@ However, at intermediate ages the relation flattens out and K dwarfs rotate at
 the same rate, regardless of mass.
 At old ages, it seems that cooler K dwarfs spin more rapidly than hotter K
 dwarfs of the same age.
-We speculate that the rotation period gap \citep{mcquillan2014} may separate
-a young regime where stellar rotation periods decrease with increasing mass
-from an old regime where periods increase with increasing mass, however more
-data are needed to provide a conclusive result.
+% We speculate that the rotation period gap \citep{mcquillan2014} may separate
+% a young regime where stellar rotation periods decrease with increasing mass
+% from an old regime where periods increase with increasing mass, however more
+% data are needed to provide a conclusive result.
 % The period-color/\teff\ relation seems to start flattening out after $\sim$1
 % Gyr (see figure \ref{fig:age_cut}), potentially around the same age, or just
 % older than the period gap which is located at a gyrochronal age of around
