--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -122,7 +122,7 @@ approach to calibrating gyrochronology}
 \include{results}
 
 % Word limit: 500
-\include{discussion}
+% \include{discussion}
 
 % Word limit: 250, currently 216
 \include{conclusion}
